Fixed button overflow when changing tab size of website

--- a/personal-portfolio/style.css
+++ b/personal-portfolio/style.css
@@ -348,6 +348,9 @@ nav ul li a:hover::after{
     font-size: 16px;
     width: 50%;
     height: 50px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .btn.btn2{
